--- a/static_page/recommend.html
+++ b/static_page/recommend.html
@@ -23,13 +23,13 @@
         <a class="fa fa-bars" href="#"></a>
       </li>
       <li>
-        <router-link to="/">我的</router-link>
+        <a href="#">我的</a>
       </li>
       <li>
-        <router-link class="active" to="/">音乐</router-link>
+        <a href="#">音乐</a>
       </li>
       <li>
-        <router-link to="/">动态</router-link>
+        <a href="#">动态</a>
       </li>
       <li>
         <a class="fa fa-search" href="#"></a>
