--- a/static_page/wzx-index.html
+++ b/static_page/wzx-index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/wzx-index.css">
 </head>
 
 <body>
