--- a/static_page/wl-singer.html
+++ b/static_page/wl-singer.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/singer.css">
+    <link rel="stylesheet" href="css/wl-singer.css">
 
 </head>
 
