--- a/static_page/zql-recommend.html
+++ b/static_page/zql-recommend.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/font-awesome.css">
-  <link rel="stylesheet" href="./css/recommend.css">
+  <link rel="stylesheet" href="./css/zql-recommend.css">
 
   <!--推荐页面-->
   <!--作者：Lewis-->
