--- a/static_page/mine.html
+++ b/static_page/mine.html
@@ -20,6 +20,7 @@
 
 
 
+
         header .nav {
             display: flex;
             justify-content: space-around;
@@ -31,11 +32,13 @@
 
 
 
+
         header .nav li {
             text-align: center;
             font-size: 3vh;
             color: #fff;
         }
+
 
 
 
@@ -53,10 +56,12 @@
 
 
 
+
         .jem-main .jem-my-content {
             height: 100%;
             background-color: rgba(255, 255, 255, .4);
         }
+
 
 
 
@@ -67,10 +72,12 @@
 
 
 
+
         .jem-main .jem-my-content li.jem-my span {
             font-size: 1vh;
         }
         /*for user-info*/
+
 
 
 
@@ -88,10 +95,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-user-info img {
             width: 9vh;
             height: 9vh;
         }
+
 
 
 
@@ -105,11 +114,13 @@
 
 
 
+
         .jem-main .jem-my-content .jem-user-info .jem-user-content p {
             margin-bottom: 2vh;
             font-size: 3vh;
             font-weight: bold;
         }
+
 
 
 
@@ -122,10 +133,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-user-info .jem-user-content ul li {
             font-size: 2vh;
             font-weight: bold;
         }
+
 
 
 
@@ -141,6 +154,7 @@
 
 
 
+
         .jem-main .jem-my-content .jem-music-state {
             display: flex;
             height: 11vh;
@@ -151,10 +165,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-music-state img {
             width: 4vh;
             height: 4vh;
         }
+
 
 
 
@@ -171,10 +187,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-music-state p span {
             padding-left: 2vw;
             color: #2f2e2e;
         }
+
 
 
 
@@ -188,10 +206,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-recent-play p i,
         .jem-main .jem-my-content .jem-mydownload p i {
             color: #000;
         }
+
 
 
 
@@ -206,11 +226,13 @@
 
 
 
+
         .jem-main .jem-my-content .jem-mydownload p {
             width: 70vw;
             border: none;
         }
         /*for self-list*/
+
 
 
 
@@ -225,6 +247,7 @@
 
 
 
+
         .jem-main .jem-my-content .jem-self-list .list-title {
             font-size: 2.5vh;
             font-weight: bold;
@@ -233,10 +256,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-self-list .list-title span {
             font-size: 1vh;
             color: #222;
         }
+
 
 
 
@@ -251,6 +276,7 @@
 
 
 
+
         .jem-main .jem-my-content .jem-self-list .star img {
             width: 7vh;
             height: 7vh;
@@ -259,9 +285,11 @@
 
 
 
+
         .jem-main .jem-my-content .jem-self-list .what-i-like {
             width: 59vw;
         }
+
 
 
 
@@ -275,10 +303,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-self-list i {
             transform: scale(1.8)
         }
         /*for my-collect*/
+
 
 
 
@@ -292,10 +322,12 @@
 
 
 
+
         .jem-main .jem-my-content .jem-my-collect .collect-title {
             font-size: 3vh;
             font-weight: bold;
         }
+
 
 
 
@@ -310,6 +342,7 @@
 
 
 
+
         .jem-main .jem-my-content .jem-my-collect .collect-title ul .album {
             border: 1px solid #000;
             border-top: 0;
@@ -318,11 +351,13 @@
 
 
 
+
         .jem-main .jem-my-content .jem-my-collect p {
             padding-top: 5vh;
             font-size: 1vh;
             text-align: center;
         }
+
 
 
 
@@ -347,9 +382,10 @@
 
 
 
+
         footer {
             position: fixed;
-            top: 92vh;
+            bottom: 0;
             display: flex;
             width: 100%;
             height: 8vh;
@@ -357,6 +393,7 @@
             background: rgba(255, 255, 255, .9);
             justify-content: space-between;
         }
+
 
 
 
@@ -369,10 +406,12 @@
         }
 
 
+
         footer .jem-info .jem-cover {
             width: 7vh;
             height: 7vh;
         }
+
 
 
         footer .jem-info .jem-song-name {
@@ -382,6 +421,7 @@
         }
 
 
+
         footer .jem-play-ctrl {
             display: flex;
             width: 37vw;
@@ -389,6 +429,7 @@
             justify-content: space-around;
             align-items: center;
         }
+
 
 
         footer .jem-play-ctrl i {
