--- a/static_page/mine_recent_play.html
+++ b/static_page/mine_recent_play.html
@@ -140,7 +140,7 @@
 
         footer {
             position: fixed;
-            top: 92vh;
+            bottom: 0;
             display: flex;
             width: 100%;
             height: 8vh;
