--- a/static_page/wl-dynamic.html
+++ b/static_page/wl-dynamic.html
@@ -1,3 +1,7 @@
+<!--
+    作者：hubvues
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +13,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/dynamic.css">
+    <link rel="stylesheet" href="css/wl-dynamic.css">
 </head>
 
 <body>
