upload the musicHot and musicRadio pages files

--- a/static_page/music-radio.html
+++ b/static_page/music-radio.html
@@ -119,7 +119,7 @@
 
         .yao-radio-main .main-content .recommend-songlist {
             display: flex;
-            margin-bottom: 1.5worem;
+            margin-bottom: 1.5rem;
             justify-content: space-between;
             align-items: center;
         }
